--- a/app/Resources/assets/css/main.sass
+++ b/app/Resources/assets/css/main.sass
@@ -25,21 +25,24 @@ div
   float: right
 input[type=submit], button
   color: $white
-  background: linear-gradient(to bottom, #24c624 0%, #19a61a 100%)
+  background: linear-gradient(to bottom, #53ad32 0%, #318516 100%)
   border: 1px solid #adadad
   border-bottom-color: #8c8c8c
   border-top-color: #d4d4d4
   border-right-color: #757575
   border-radius: 5px
-  font-size: 120%
-  padding: 0.4em
+  font-size: 90%
+  padding: 0.3em 0.6em
   font-weight: bold
   text-shadow: 0px 0px 2px #333333
+  margin-top: 5px
 
 input[type=text], textarea
   border: 2px solid #aaaaaa
   border-radius: 2px
   width: 100%
+  &.error
+    border-color: red
 
 .container
   padding-top: 20px
@@ -47,11 +50,40 @@ input[type=text], textarea
 
 .header
   .logo
+    margin-top: 28px
     color: grey
     font-size: 160%
     b
       color: black
-    span
+      > span
+        display: inline-block
+        position: relative
+        top: 0.5em
+      span.square
+        display: inline-block
+        width: 1.15em
+        background-color: #ffbf16
+        border-radius: 2px
+        transform: rotate(-45deg)
+        height: 1.1em
+        position: relative
+        top: 0px
+        padding-top: 0.4em
+        padding-right: 0.4em
+        margin: 0 0.2em
+        > span.square
+          border: 1px solid #000
+          width: 0.9em
+          height: 0.9em
+          transform: none
+          right: 0.1em
+          top: -0.32em
+          > span
+            display: inline-block
+            border: none
+            transform: rotate(45deg)
+            position: relative
+            top: -0.15em
   .menu li a
     color: $blue
 .menu
@@ -80,12 +112,12 @@ input[type=text], textarea
     margin-top: -43px
     font-size: 120%
     text-align: center
-    img
 
 .content
   margin-bottom: 42px
   .left
     .headline
+      font-size: 110%
       padding: 1.2em
       line-height: 128%
       text-align: center
@@ -104,7 +136,7 @@ input[type=text], textarea
     .info-block
       margin-bottom: 32px
       h2
-        font-size: 120%
+        font-size: 110%
         font-family: 'SohoGothic', sans-serif
         text-transform: uppercase
         padding-bottom: 26px
@@ -113,16 +145,29 @@ input[type=text], textarea
         background: url('/images/gear.png') bottom center no-repeat
       .client-review
         .quote-mark
-          color: $gray
-          font-size: 120%
+          margin-top: 50px
+          margin-bottom: -50px
+          color: #9a9a9a
+          font-size: 600%
+          font-family: 'Verdana'
+          @media (max-width: 640px)
+            display: none
+        .name, .company, .quote
+          font-size: 80%
         .name
-        .company
+          font-weight: bold
         .quote
+          margin-left: 48px
+          @media(max-width: 640px)
+            margin-left: 0
 
 .footer
   background: $gray linear-gradient(to bottom, #777777 0%, $gray 8%)
   .menu
-    font-size: 80%
+    font-size: 70%
+    ul
+      margin-left: 0
+      padding-left: 0
   .social-buttons
     button
       width: 32px
