++form( but no validating)

--- a/app/Resources/assets/css/main.sass
+++ b/app/Resources/assets/css/main.sass
@@ -50,7 +50,7 @@ input[type=text], textarea
 
 .header
   .logo
-    margin-top: 28px
+    //margin-top: 28px
     color: grey
     font-size: 160%
     b
