--- a/app/Resources/assets/css/main.sass
+++ b/app/Resources/assets/css/main.sass
@@ -37,7 +37,7 @@ input[type=submit], button
   text-shadow: 0px 0px 2px #333333
   margin-top: 5px
 
-input[type=text], textarea
+input[type=text], input[type=email], textarea
   border: 2px solid #aaaaaa
   border-radius: 2px
   width: 100%
