--- a/web/css/bdaa4a9_main_1.css
+++ b/web/css/bdaa4a9_main_1.css
@@ -1124,7 +1124,7 @@
     margin-left: 100%;
   }
 }
-/* line 17, assetic_compasszb5n5B.sass */
+/* line 17, assetic_compasscC1X7j.sass */
 body {
   font-family: "GothicGauge", sans-serif;
   font-size: 1em;
@@ -1132,17 +1132,17 @@ body {
   margin: 0px;
 }
 
-/* line 22, assetic_compasszb5n5B.sass */
+/* line 22, assetic_compasscC1X7j.sass */
 div {
   box-sizing: border-box;
 }
 
-/* line 24, assetic_compasszb5n5B.sass */
+/* line 24, assetic_compasscC1X7j.sass */
 .float-right {
   float: right;
 }
 
-/* line 26, assetic_compasszb5n5B.sass */
+/* line 26, assetic_compasscC1X7j.sass */
 input[type=submit], button {
   color: #FFFFFF;
   background: linear-gradient(to bottom, #53ad32 0%, #318516 100%);
@@ -1158,40 +1158,39 @@ input[type=submit], button {
   margin-top: 5px;
 }
 
-/* line 40, assetic_compasszb5n5B.sass */
-input[type=text], textarea {
+/* line 40, assetic_compasscC1X7j.sass */
+input[type=text], input[type=email], textarea {
   border: 2px solid #aaaaaa;
   border-radius: 2px;
   width: 100%;
 }
-/* line 44, assetic_compasszb5n5B.sass */
-input[type=text].error, textarea.error {
+/* line 44, assetic_compasscC1X7j.sass */
+input[type=text].error, input[type=email].error, textarea.error {
   border-color: red;
 }
 
-/* line 47, assetic_compasszb5n5B.sass */
+/* line 47, assetic_compasscC1X7j.sass */
 .container {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-/* line 52, assetic_compasszb5n5B.sass */
+/* line 52, assetic_compasscC1X7j.sass */
 .header .logo {
-  margin-top: 28px;
   color: grey;
   font-size: 160%;
 }
-/* line 56, assetic_compasszb5n5B.sass */
+/* line 56, assetic_compasscC1X7j.sass */
 .header .logo b {
   color: black;
 }
-/* line 58, assetic_compasszb5n5B.sass */
+/* line 58, assetic_compasscC1X7j.sass */
 .header .logo b > span {
   display: inline-block;
   position: relative;
   top: 0.5em;
 }
-/* line 62, assetic_compasszb5n5B.sass */
+/* line 62, assetic_compasscC1X7j.sass */
 .header .logo b span.square {
   display: inline-block;
   width: 1.15em;
@@ -1205,7 +1204,7 @@ input[type=text].error, textarea.error {
   padding-right: 0.4em;
   margin: 0 0.2em;
 }
-/* line 74, assetic_compasszb5n5B.sass */
+/* line 74, assetic_compasscC1X7j.sass */
 .header .logo b span.square > span.square {
   border: 1px solid #000;
   width: 0.9em;
@@ -1214,7 +1213,7 @@ input[type=text].error, textarea.error {
   right: 0.1em;
   top: -0.32em;
 }
-/* line 81, assetic_compasszb5n5B.sass */
+/* line 81, assetic_compasscC1X7j.sass */
 .header .logo b span.square > span.square > span {
   display: inline-block;
   border: none;
@@ -1222,12 +1221,12 @@ input[type=text].error, textarea.error {
   position: relative;
   top: -0.15em;
 }
-/* line 87, assetic_compasszb5n5B.sass */
+/* line 87, assetic_compasscC1X7j.sass */
 .header .menu li a {
   color: #5DA5D0;
 }
 
-/* line 90, assetic_compasszb5n5B.sass */
+/* line 90, assetic_compasscC1X7j.sass */
 .menu li {
   font-size: 120%;
   margin-left: 0px;
@@ -1235,17 +1234,17 @@ input[type=text].error, textarea.error {
   display: inline-block;
   list-style: none;
 }
-/* line 96, assetic_compasszb5n5B.sass */
+/* line 96, assetic_compasscC1X7j.sass */
 .menu li.active {
   background-color: #EDEDED;
 }
-/* line 98, assetic_compasszb5n5B.sass */
+/* line 98, assetic_compasscC1X7j.sass */
 .menu li a {
   text-decoration: none;
   color: grey;
 }
 
-/* line 102, assetic_compasszb5n5B.sass */
+/* line 102, assetic_compasscC1X7j.sass */
 .big-headline {
   text-align: center;
   font-family: "SohoGothic", sans-serif;
@@ -1254,36 +1253,36 @@ input[type=text].error, textarea.error {
   font-size: 120%;
 }
 
-/* line 109, assetic_compasszb5n5B.sass */
+/* line 109, assetic_compasscC1X7j.sass */
 .apps {
   background: #EDEDED linear-gradient(to bottom, #777777 0%, #EDEDED 8%);
 }
-/* line 111, assetic_compasszb5n5B.sass */
+/* line 111, assetic_compasscC1X7j.sass */
 .apps .app {
   margin-top: -43px;
   font-size: 120%;
   text-align: center;
 }
 
-/* line 116, assetic_compasszb5n5B.sass */
+/* line 116, assetic_compasscC1X7j.sass */
 .content {
   margin-bottom: 42px;
 }
-/* line 119, assetic_compasszb5n5B.sass */
+/* line 119, assetic_compasscC1X7j.sass */
 .content .left .headline {
   font-size: 110%;
   padding: 1.2em;
   line-height: 128%;
   text-align: center;
 }
-/* line 124, assetic_compasszb5n5B.sass */
+/* line 124, assetic_compasscC1X7j.sass */
 .content .left .headline.blue {
   background-color: #5DA5D0;
   color: #FFFFFF;
   margin: 0.6em;
   padding: 0.6em;
 }
-/* line 129, assetic_compasszb5n5B.sass */
+/* line 129, assetic_compasscC1X7j.sass */
 .content .left .phone {
   background-color: #44da36;
   padding: 0 0.4em;
@@ -1291,11 +1290,11 @@ input[type=text].error, textarea.error {
   margin: 0 0.05em;
   display: inline-block;
 }
-/* line 136, assetic_compasszb5n5B.sass */
+/* line 136, assetic_compasscC1X7j.sass */
 .content .right .info-block {
   margin-bottom: 32px;
 }
-/* line 138, assetic_compasszb5n5B.sass */
+/* line 138, assetic_compasscC1X7j.sass */
 .content .right .info-block h2 {
   font-size: 110%;
   font-family: "SohoGothic", sans-serif;
@@ -1305,7 +1304,7 @@ input[type=text].error, textarea.error {
   color: #5DA5D0;
   background: url("/images/gear.png") bottom center no-repeat;
 }
-/* line 147, assetic_compasszb5n5B.sass */
+/* line 147, assetic_compasscC1X7j.sass */
 .content .right .info-block .client-review .quote-mark {
   margin-top: 50px;
   margin-bottom: -50px;
@@ -1314,61 +1313,61 @@ input[type=text].error, textarea.error {
   font-family: "Verdana";
 }
 @media (max-width: 640px) {
-  /* line 147, assetic_compasszb5n5B.sass */
+  /* line 147, assetic_compasscC1X7j.sass */
   .content .right .info-block .client-review .quote-mark {
     display: none;
   }
 }
-/* line 155, assetic_compasszb5n5B.sass */
+/* line 155, assetic_compasscC1X7j.sass */
 .content .right .info-block .client-review .name, .content .right .info-block .client-review .company, .content .right .info-block .client-review .quote {
   font-size: 80%;
 }
-/* line 157, assetic_compasszb5n5B.sass */
+/* line 157, assetic_compasscC1X7j.sass */
 .content .right .info-block .client-review .name {
   font-weight: bold;
 }
-/* line 159, assetic_compasszb5n5B.sass */
+/* line 159, assetic_compasscC1X7j.sass */
 .content .right .info-block .client-review .quote {
   margin-left: 48px;
 }
 @media(max-width: 640px) {
-  /* line 159, assetic_compasszb5n5B.sass */
+  /* line 159, assetic_compasscC1X7j.sass */
   .content .right .info-block .client-review .quote {
     margin-left: 0;
   }
 }
-/* line 164, assetic_compasszb5n5B.sass */
+/* line 164, assetic_compasscC1X7j.sass */
 .footer {
   background: #EDEDED linear-gradient(to bottom, #777777 0%, #EDEDED 8%);
 }
-/* line 166, assetic_compasszb5n5B.sass */
+/* line 166, assetic_compasscC1X7j.sass */
 .footer .menu {
   font-size: 70%;
 }
-/* line 168, assetic_compasszb5n5B.sass */
+/* line 168, assetic_compasscC1X7j.sass */
 .footer .menu ul {
   margin-left: 0;
   padding-left: 0;
 }
-/* line 172, assetic_compasszb5n5B.sass */
+/* line 172, assetic_compasscC1X7j.sass */
 .footer .social-buttons button {
   width: 32px;
   height: 32px;
   margin-right: 10px;
 }
-/* line 176, assetic_compasszb5n5B.sass */
+/* line 176, assetic_compasscC1X7j.sass */
 .footer .social-buttons button.facebook {
   background: url("/images/facebook_soc.png");
 }
-/* line 178, assetic_compasszb5n5B.sass */
+/* line 178, assetic_compasscC1X7j.sass */
 .footer .social-buttons button.twitter {
   background: url("/images/twitter_soc.png");
 }
-/* line 180, assetic_compasszb5n5B.sass */
+/* line 180, assetic_compasscC1X7j.sass */
 .footer .social-buttons button.linkedin {
   background: url("/images/linkedin_soc.png");
 }
-/* line 182, assetic_compasszb5n5B.sass */
+/* line 182, assetic_compasscC1X7j.sass */
 .footer .copyright {
   font-size: 80%;
 }
